--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>rovio</name>
   <version>0.0.0</version>
   <description>
@@ -11,12 +11,12 @@
   <author>bloeschm</author>
   <maintainer email="bloeschm@ethz.ch">bloeschm</maintainer>
   <license>BSD License</license>
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <depend>cmake_modules</depend>
   <depend>lightweight_filtering</depend>
   <depend>kindr</depend>
-  <depend>roscpp</depend>
+  <depend>rclcpp</depend>
   <depend>roslib</depend>
   <depend>cv_bridge</depend>
   <depend>message_generation</depend>
@@ -28,4 +28,8 @@
   <depend>tf</depend>
   <depend>rosbag</depend>
   <depend>yaml_cpp_catkin</depend>
+  <build_depend>rosidl_default_generators</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
 </package>
