Resize image: launch args and code to resize

--- a/launch/ros2_rovio_rosbag_loader_launch.yaml
+++ b/launch/ros2_rovio_rosbag_loader_launch.yaml
@@ -53,3 +53,9 @@ launch:
           value: "$(var imu_topic_name)"
         - name: gt_topic_name
           value: "$(var gt_topic_name)"
+        - name: resize_image
+          value: false
+        - name: resize_image_width
+          value: 320
+        - name: reisze_image_height
+          value: 240
