--- a/launch/ros2_rovio_node_launch.yaml
+++ b/launch/ros2_rovio_node_launch.yaml
@@ -19,6 +19,15 @@ launch:
   - arg:
       name: cam1_topic
       default: "/cam1/image_raw"
+  - arg:
+      name: resize_image
+      default: "false"
+  - arg:
+      name: resize_image_width
+      default: "320"
+  - arg:
+      name: resize_image_height
+      default: "240"
   - node:
       pkg: rovio
       exec: rovio_node
@@ -33,3 +42,9 @@ launch:
           value: "$(var cam1_config)"
         - name: use_sim_time
           value: true
+        - name: resize_image
+          value: "$(var resize_image)"
+        - name: resize_image_width
+          value: "$(var resize_image_width)"
+        - name: reize_image_height
+          value: "$(var resize_image_height)"
