hotfix: no resizing by default

--- a/launch/ros2_rovio_rosbag_loader_launch.yaml
+++ b/launch/ros2_rovio_rosbag_loader_launch.yaml
@@ -33,7 +33,7 @@ launch:
 
   - arg:
       name: resize_image
-      default: "true"
+      default: "false"
 
   - arg:
       name: resize_image_width
