--- a/launch/ros2_rovio_node_launch.yaml
+++ b/launch/ros2_rovio_node_launch.yaml
@@ -48,3 +48,11 @@ launch:
           value: "$(var resize_image_width)"
         - name: resize_image_height
           value: "$(var resize_image_height)"
+  - node:
+      pkg: image_view
+      exec: image_view
+      name: rovio_image_view
+      param:
+        - name: image
+          value: /rovio/imgVis0
+
