--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ find_package(tf2 REQUIRED)
 find_package(rosbag2_cpp REQUIRED)
 find_package(rosbag2_storage REQUIRED)
 find_package(image_transport REQUIRED)
-
+find_package(tf2_ros REQUIRED)
 # YAML
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(YamlCpp REQUIRED yaml-cpp>=0.5)
@@ -84,6 +84,7 @@ ament_target_dependencies(${PROJECT_NAME}_lib
 		std_msgs
 		cv_bridge
 		tf2
+		tf2_ros
 		std_srvs
 		visualization_msgs
 		rosbag2_cpp
@@ -140,6 +141,7 @@ ament_export_dependencies(
 		sensor_msgs
 		cv_bridge
 		tf2
+		tf2_ros
 		rosidl_default_runtime
 		image_transport
 )
