--- a/package.xml
+++ b/package.xml
@@ -31,6 +31,7 @@
   <depend>rovio_interfaces</depend>
   <depend>rosbag</depend>
   <depend>yaml_cpp_catkin</depend>
+  <depend>tf2_ros</depend>
  <export>
  <build_type>ament_cmake</build_type>
  </export>
